# qBaggy

./: CMakeLists.txt
baggy/: .gitignore  CMakeLists.txt
baggy/cmake/: .gitignore  common.cmake
baggy/include/baggy/: Exception.h  Extractor.h  ExtractorException.h  XmlMessageWriter.h  std.h
baggy/source/app/: BaggyGlobal.cpp  BaggyGlobal.h  main.cpp
baggy/source/app/components/: PluginLoader.cpp  PluginLoader.h
baggy/source/app/core/: BagData.cpp  BagData.h  BaseLastError.cpp  BaseLastError.h  PluginLibrary.cpp  PluginLibrary.h  PluginManager.cpp  PluginManager.h
baggy/source/app/model/: Note.cpp  Note.h  PluginInfo.cpp  PluginInfo.h
baggy/source/app/qml/: About.qml  Main.qml  PluginLoader.qml  qml.qrc
baggy/source/cli/: BaggyCLI.cpp  BaggyCLI.h  Process.cpp  Process.h  main.cpp
baggy/source/core/: CoreException.cpp  CoreException.h  Exception.cpp  ExtractorException.cpp  ExtractorLibrary.cpp  ExtractorLibrary.h  SafeExtractor.cpp  SafeExtractor.h  XmlMessageWriter.cpp  import.h  std.cpp
baggy/template/: BaggyCoreConfig.cmake.in
extractors/: CMakeLists.txt
extractors/cmake/: ExtractorTarget.cmake
extractors/source/: SensorImageExtractor.cpp  SensorImageExtractor.h  SensorImuExtractor.cpp  SensorImuExtractor.h  SensorLaserScanExtractor.cpp  SensorLaserScanExtractor.h  SensorMagneticFieldExtractor.cpp  SensorMagneticFieldExtractor.h
